2/24/2022
    MainFeatures
        -Added angular routing from the source page through the changelog and messages icons
        -Implemented components on the messages page to closely match the original website
        -Implemented a header and building block code for the changelog page
    SecondaryFeatures
        -Added angular routing for five places on the original source page - catch up from last week
3/3/2022
    MainFeatures
        -Implememnted firebase
        -Added user info at the top of website
3/10/2022
    MainFeatures
        -Implemented Backend data to fill cards
        -Used Firebase to store the data
    SecondaryFeatures
        -Implemented NgFor loop for cards
3/23/2022
    MainFeatures
        -Implemented a firebase hosted web link
    SecondaryFeatures 
        -Removed Bullet points from navbar
        -cosmetic touch-ups for mainpage
        -added background image for mainpage
3/30/2022
    MainFeatures
        -Added an admin backdoor that allows for creation of button in the character creation page