@@ -1,0 +1,12 @@
+.input-group{
+    margin-top: 5px;
+}
+
+.row{
+    margin-top: 75px;
+}
+
+.btn{
+    margin-top: 10px;
+    margin-right: 10px;
+}
